--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
     "jsdom": "^11.11.0",
+    "node-sass": "^4.9.0",
     "require-extension-hooks": "^0.3.2",
     "require-extension-hooks-babel": "^0.1.1",
-    "require-extension-hooks-vue": "^1.0.1"
+    "require-extension-hooks-vue": "^1.0.1",
+    "sass-loader": "^7.0.3"
   },
   "ava": {
     "require": [
