--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "test": "npm run test:unit -- npm run test:2e2",
+    "test": "npm run test:unit -- npm run test:e2e",
     "test:unit": "TEST=unit ava ./test/specs/*.spec.js --verbose --serial",
     "test:e2e": "TEST=e2e ava ./test/e2e/*.spec.js --verbose",
     "build": "nuxt build",
