--- a/package.json
+++ b/package.json
@@ -23,17 +23,23 @@
     "ava": "^0.25.0",
     "babel-eslint": "^8.2.1",
     "browser-env": "^3.2.5",
+    "cross-env": "^5.2.0",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
     "jsdom": "^11.11.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.2",
     "nuxt-sass-resources-loader": "^2.0.2",
     "require-extension-hooks": "^0.3.2",
     "require-extension-hooks-babel": "^0.1.1",
     "require-extension-hooks-vue": "^1.0.1",
     "sass-loader": "^7.0.3"
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0"
+    }
   },
   "ava": {
     "require": [
